fix header logo on mobile

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -139,4 +139,7 @@ header {
 		width: 100%;
 		justify-content: flex-end;
 	}
+	.logo img {
+		height: 200%;
+	}
 }
